[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
demo_creation = ["ultralytics_branding/**/*"]

[project]
name = "my-library"
version = "0.1.1"
description = "Library to sraw annotations"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "opencv-python>=4.5",
    "numpy",
    "Pillow>=9.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]